# ffr_crypto

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ffr_crypto/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: ffr_crypto.dart
lib/src/: ffr_crypto_bindings_generated.dart
rust/: Cargo.toml  ffr_crypto.h
rust/src/: lib.rs
test/: ffr_crypto_test.dart
