[package]
name = "ffr_crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
rand = { version = "0.8", features = ["std"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
hkdf = "0.12"
argon2 = "0.5"
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }


